Source/WebCore/platform/ios/KeyEventIOS.mm
@@ -197,13 +197,15 @@ int windowsKeyCodeForKeyCode(uint16_t keyCode)
     return 0; // Unknown key
 }
 
+// This function is only used to map software keyboard events because they lack a key code.
+// When !USE(UIKIT_KEYBOARD_ADDITIONS), this function is also used to map hardware keyboard
+// keyup events because they lack a key code.
 int windowsKeyCodeForCharCode(unichar charCode)
 {
     switch (charCode) {
     case 8: case 0x7F: return VK_BACK;
     case 9: return VK_TAB;
     case 0xD: case 3: return VK_RETURN;
-    case 0x1B: return VK_ESCAPE; // WebKit generated code for Escape.
     case ' ': return VK_SPACE;
 
     case '0': case ')': return VK_0;
@@ -243,6 +245,9 @@ int windowsKeyCodeForCharCode(unichar charCode)
     case 'y': case 'Y': return VK_Y;
     case 'z': case 'Z': return VK_Z;
 
+#if !USE(UIKIT_KEYBOARD_ADDITIONS)
+    case 0x1B: return VK_ESCAPE; // WebKit generated code for Escape.
+
     // WebKit uses Unicode PUA codes in the OpenStep reserve range for some special keys.
     case NSUpArrowFunctionKey: return VK_UP;
     case NSDownArrowFunctionKey: return VK_DOWN;
@@ -250,6 +255,7 @@ int windowsKeyCodeForCharCode(unichar charCode)
     case NSRightArrowFunctionKey: return VK_RIGHT;
     case NSPageUpFunctionKey: return VK_PRIOR;
     case NSPageDownFunctionKey: return VK_NEXT;
+#endif
 
     // This is for U.S. keyboard mapping, and doesn't necessarily make sense for different keyboard layouts.
     // For example, '"' on Windows Russian layout is VK_2, not VK_OEM_7.
@@ -271,11 +277,13 @@ int windowsKeyCodeForCharCode(unichar charCode)
 static bool isFunctionKey(UChar charCode)
 {
     switch (charCode) {
+#if !USE(UIKIT_KEYBOARD_ADDITIONS)
     case 1: // Home
     case 4: // End
     case 5: // FIXME: For some reason WebKitTestRunner generates this code for F14 (why?).
     case 0x7F: // Forward Delete
     case 0x10: // Function key (e.g. F1, F2, ...)
+#endif
 
     // WebKit uses Unicode PUA codes in the OpenStep reserve range for some special keys.
     case NSUpArrowFunctionKey:
@@ -285,8 +293,18 @@ static bool isFunctionKey(UChar charCode)
     case NSPageUpFunctionKey:
     case NSPageDownFunctionKey:
     case NSClearLineFunctionKey: // Num Lock / Clear
+#if USE(UIKIT_KEYBOARD_ADDITIONS)
+    case NSDeleteFunctionKey: // Forward delete
+    case NSEndFunctionKey:
+    case NSInsertFunctionKey:
+    case NSHomeFunctionKey:
+#endif
         return true;
     }
+#if USE(UIKIT_KEYBOARD_ADDITIONS)
+    if (charCode >= NSF1FunctionKey && charCode <= NSF24FunctionKey)
+        return true;
+#endif
     return false;
 }
 
