Source/WebKit/UIProcess/ios/forms/WKFormSelectPopover.mm
@@ -78,7 +78,11 @@ ALLOW_DEPRECATED_DECLARATIONS_END
 
 @class WKSelectPopover;
 
+#if USE(UIKIT_KEYBOARD_ADDITIONS)
+@interface WKSelectTableViewController : UITableViewController
+#else
 @interface WKSelectTableViewController : UITableViewController <UIKeyInput>
+#endif
 {
     NSUInteger _singleSelectionIndex;
     NSUInteger _singleSelectionSection;
@@ -359,6 +363,7 @@ ALLOW_DEPRECATED_DECLARATIONS_END
     }
 }
 
+#if !USE(UIKIT_KEYBOARD_ADDITIONS)
 #pragma mark UIKeyInput delegate methods
 
 - (BOOL)hasText
@@ -373,6 +378,8 @@ ALLOW_DEPRECATED_DECLARATIONS_END
 - (void)deleteBackward
 {
 }
+
+#endif
 
 @end
 
@@ -410,8 +417,10 @@ ALLOW_DEPRECATED_DECLARATIONS_END
     ALLOW_DEPRECATED_DECLARATIONS_END
 
     [navController release];
-    
+
+#if !USE(UIKIT_KEYBOARD_ADDITIONS)
     [[UIKeyboardImpl sharedInstance] setDelegate:_tableViewController.get()];
+#endif
     
     return self;
 }
